fix filter overflow

--- a/src/scss/components/sections/_search-filter.scss
+++ b/src/scss/components/sections/_search-filter.scss
@@ -1,5 +1,4 @@
 .search-filter {
-  overflow: hidden;
   padding: 24px 0 5px;
 
   &__form {
